# ktikz

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog  Doxyfile  FindPoppler.cmake  HACKING  INSTALL  INSTALL-0.10.Windows  INSTALL-0.11.Windows  INSTALL.Windows  KtikzCPackOptions.cmake  KtikzConfig.cmake  LICENSE.GPL2  LICENSE.GPL3  PACKAGING  README  README.md  TODO  conf.pri  defaults.pri  ktikz.pro  macros.pri  qtikz.nsi  qtikz.pro  qtikzconfig.pri  qtikzdefaults.pri  qtikzmacros.pri
.github/workflows/: ci.yml
Arch/: QTikz.archimate
app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  app.pri  app.pro  application.qrc  assistantcontroller.cpp  assistantcontroller.h  colorbutton.h  configappearancewidget.cpp  configappearancewidget.h  configappearancewidget.ui  configdialog.cpp  configdialog.h  configeditorwidget.cpp  configeditorwidget.h  configeditorwidget.ui  configgeneralwidget.cpp  configgeneralwidget.h  configgeneralwidget.ui  configpreviewwidget.cpp  configpreviewwidget.h  configpreviewwidget.ui  editgotolinewidget.cpp  editgotolinewidget.h  editgotolinewidget.ui  editindentdialog.cpp  editindentdialog.h  editindentdialog.ui  editindentwidget.cpp  editindentwidget.h  editindentwidget.ui  editreplacecurrentwidget.cpp  editreplacecurrentwidget.h  editreplacewidget.cpp  editreplacewidget.h  editreplacewidget.ui  extract-tikzcommands.xq  ktikz.desktop  ktikz.qrc  (+50 more)
app/icons/: CMakeLists.txt  hisc-apps-ktikz.svgz
app/kxmlgui5/ktikz/: ktikzui.rc  ktikzui_frameworks.rc
common/: common.pri  ktikz.kcfg  mainwidget.h  settings.kcfgc  templatewidget.cpp  templatewidget.h  templatewidget.ui  text-x-pgf.xml  textcodecprofile.h  tikzpreview.cpp  tikzpreview.h  tikzpreviewcontroller.cpp  tikzpreviewcontroller.h  tikzpreviewgenerator.cpp  tikzpreviewgenerator.h  tikzpreviewmessagewidget.cpp  tikzpreviewmessagewidget.h  tikzpreviewrenderer.cpp  tikzpreviewrenderer.h  tikzpreviewthread.cpp  tikzpreviewthread.h  tikztemporaryfilecontroller.cpp  tikztemporaryfilecontroller.h  x-pgf.xml
common/utils/: action.cpp  action.h  colorbutton.cpp  colorbutton.h  colordialog.h  combobox.cpp  combobox.h  file.cpp  file.h  filedialog.cpp  filedialog.h  fontdialog.h  globallocale.cpp  globallocale.h  icon.h  lineedit.cpp  lineedit.h  messagebox.cpp  messagebox.h  pagedialog.cpp  pagedialog.h  printpreviewdialog.cpp  printpreviewdialog.h  recentfilesaction.cpp  recentfilesaction.h  selectaction.cpp  selectaction.h  standardaction.cpp  standardaction.h  tempdir.cpp  tempdir.h  toggleaction.cpp  toggleaction.h  toolbar.cpp  toolbar.h  url.cpp  url.h  urlcompletion.h  utils.pri  zoomaction.cpp  (+1 more)
data/: CMakeLists.txt  data.pri  ktikz.appdata.xml  ktikz.desktop  qtikz.desktop.template
data/examples/: backup_diagram.tikz  beamer-example-template.pgs  ktikzlatex2ps2pdf.sh  pst-example.pgf  template_example.pgs  template_example2.pgs  template_example_upd.pgs  utf8-demo-accents.pgf  utf8-template.pgs
debian/: README  README.Debian  changelog  control  copyright  ktikz.1  ktikz.dirs  ktikz.docs  ktikz.install  ktikz.menu  ktikz.mime  menu  qtikz.dirs  qtikz.menu  qtikz.mime  rules  watch  x-text-pgf.desktop
debian/patches/: qmake-noopt.patch  series
debian/source/: include-binaries
doc/: CMakeLists.txt  commands.docbook  configuration.docbook  doc.pri  generate-qt-doc.sh  index.css  index.docbook  index.html  interface.docbook  ktikz.1  qtikz.1.template  qtikz.qch  qtikz.qhc  qtikz.qhcp  qtikz.qhp  usage.docbook
examples/: adaptive_hopf_structure.tikz  hfst11-meetkinterpretatie3.pgf  ktikzlatex2ps2pdf.sh  ktikzlatex2ps2pdf_template.pgs  pst-example-template.pgs  template_example2.pgs
part/: CMakeLists.txt  browserextension.cpp  browserextension.h  configdialog.cpp  configdialog.h  configgeneralwidget.cpp  configgeneralwidget.h  configgeneralwidget.ui  ktikzpart.desktop  ktikzpart.json  ktikzpart.rc  part.cpp  part.h
po/: CMakeLists.txt  extract_messages.sh  extractrc  ktikz.pot  ktikz_cs.po  ktikz_es.po  ktikz_fr.po
po/lists/: tikzcommands.list
qmake/: findpoppler.pri  qtikzconfig.pri  qtikzdefaults.pri  qtikzmacros.pri
src/: aboutdialog.cpp  aboutdialog.h  application.qrc  colorbutton.cpp  colorbutton.h  configappearancewidget.cpp  configappearancewidget.h  configdialog.cpp  configdialog.h  configeditorwidget.cpp  configgeneralwidget.cpp  editgotolinewidget.cpp  editgotolinewidget.h  editgotolinewidget.ui  editindentdialog.cpp  editindentdialog.h  editindentdialog.ui  editreplacecurrentwidget.cpp  editreplacecurrentwidget.h  editreplacewidget.cpp  editreplacewidget.h  editreplacewidget.ui  ktikz.cpp  ktikz.desktop  ktikz.desktop.template  ktikz.h  ktikz_de.qm  ktikz_de.ts  ktikz_es.qm  ktikz_es.ts  ktikz_fr.qm  ktikz_fr.ts  ktikzapplication.cpp  ktikzapplication.h  lineedit.cpp  lineedit.h  loghighlighter.cpp  loghighlighter.h  logtextedit.cpp  logtextedit.h  (+25 more)
templates/: h
translations/: CMakeLists.txt  README  extract_messages.sh  extractattr  ktikz.pot  translations.pri
translations/cs/: CMakeLists.txt  ktikz.po  qtikz_cs.ts
translations/de/: CMakeLists.txt  ktikz.po  qtikz_de.ts
translations/es/: CMakeLists.txt  ktikz.po  qtikz_es.ts
translations/fr/: CMakeLists.txt  ktikz.po  qtikz_fr.ts
win32/: qtikz-0.10.nsi  qtikz-0.11.nsi  qtikz.rc  win32.pri
